se creo las pantallas de carga y el }+lazyload

--- a/styles/app.css
+++ b/styles/app.css
@@ -238,7 +238,7 @@
 }
 .section2__container .section2__container--details .section2__container--title .section2__container--carga {
   width: 100px;
-  height: 50px;
+  height: 5 0px;
 }
 .section2__container .section2__container--details .section2__container--description .section2__container--sipnosis {
   font-family: "Overpass", sans-serif;
