--- a/styles/app.scss
+++ b/styles/app.scss
@@ -248,7 +248,7 @@
                 }
                 .section2__container--carga{
                     width: 100px;
-                    height: 50px;
+                    height: 5   0px;
                     @extend .section__container--load;
                 }
             }
