--- a/styles/app.scss
+++ b/styles/app.scss
@@ -214,6 +214,10 @@
                 content: '💜';
                 font-size: 20px;
             }
+            .section__container--like{
+                min-width: 200px;
+                height: 300px;
+            }
         }
     }
 }
