--- a/styles/app.scss
+++ b/styles/app.scss
@@ -81,6 +81,7 @@
             position: absolute;
             top: 160px;
             background-color: #eb1768cf;
+            z-index: 1;
 
             .nav__container--a{
                 padding: 5px 15px 0 10px;
