--- a/styles/app.css
+++ b/styles/app.css
@@ -26,12 +26,12 @@
   margin: 15px;
 }
 .header .header__container .header__img .header__img--logo {
-  width: 100px;
+  width: 77px;
   height: 100px;
 }
 .header .header__container .header__label {
   width: 75%;
-  height: 28vh;
+  height: 15vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -39,19 +39,21 @@
 }
 .header .header__container .header__label .header__label--input {
   width: 50%;
-  padding: 8px;
+  padding: 10px;
   border: none;
   border-radius: 5px;
   outline: none;
 }
 .header .header__container .header__label .header__label--input::-moz-placeholder {
   font-family: "Overpass", sans-serif;
+  font-size: 12px;
   font-weight: 100;
   color: #BCBCBC;
   text-align: center;
 }
 .header .header__container .header__label .header__label--input::placeholder {
   font-family: "Overpass", sans-serif;
+  font-size: 12px;
   font-weight: 100;
   color: #BCBCBC;
   text-align: center;
@@ -87,17 +89,16 @@
   color: white;
 }
 .nav__container .nav__container--list {
-  margin-top: 17px;
   display: flex;
   justify-content: center;
   flex-direction: column;
   position: absolute;
-  top: 160px;
+  top: 190px;
   background-color: rgba(235, 23, 104, 0.8117647059);
   z-index: 1;
 }
 .nav__container .nav__container--list .nav__container--a {
-  padding: 5px 15px 0 10px;
+  padding: 8px 8px 0 8px;
   font-family: "Overpass", sans-serif;
   font-weight: 100;
   color: white;
@@ -156,7 +157,7 @@
   padding-bottom: 5px;
   font-family: "Cabin", sans-serif;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 27px;
   color: #17C4EB;
 }
 .section__container .section__container--see {
@@ -166,7 +167,7 @@
 }
 .section__container .section__container--see .section__container--ver {
   font-family: "Overpass", sans-serif;
-  font-size: 3vmin;
+  font-size: 7vmin;
   text-decoration: none;
   color: black;
 }
@@ -186,7 +187,7 @@
 }
 .section__container .section__container--peliculas .section__container--movie {
   min-width: 200px;
-  height: 300px;
+  height: 280px;
   line-height: 110px;
 }
 .section__container .section__container--peliculas .buttonFav {
@@ -214,7 +215,7 @@
 }
 .section__container .section__container--peliculas .section__container--like {
   min-width: 200px;
-  height: 300px;
+  height: 290px;
 }
 
 .section__container--load, .section3 .section3__container .section__container--load4, .section2__container .section2__container--similar .section2__container--simiCate .section__container--load2, .section2__container .section2__container--details .section2__container--title .section2__container--carga, .section2__container .section2__container--imagen .section__container--load3 {
@@ -282,7 +283,7 @@
 .section2__container .section2__container--subtitulo .section2__container--Subtitle .section2__container--h2, .section2__container .section2__container--similar .section2__container--Subtitle .section2__container--h2, .section2__container .section2__container--similar .section2__container--simiSubtitle .section2__container--h2, .section2__container .section2__container--similar .section2__container--simiSubtitle .section2__container--simiH2 {
   padding-bottom: 5px;
   font-family: "Cabin", sans-serif;
-  font-size: 18px;
+  font-size: 27px;
   color: #17C4EB;
 }
 .section2__container .section2__container--subtitulo .section2__container--puntos, .section2__container .section2__container--similar .section2__container--puntos, .section2__container .section2__container--subtitulo .section2__container--categorias, .section2__container .section2__container--similar .section2__container--categorias {
@@ -343,7 +344,8 @@
   margin-top: 25px;
   margin-bottom: 25px;
   display: grid;
-  grid-template-columns: 182px 182px;
+  grid-template-columns: 247px;
+  /* grid-template-columns: 170px 170px; */
   grid-template-rows: auto;
   -moz-column-gap: 5px;
        column-gap: 5px;
@@ -353,7 +355,7 @@
   position: relative;
 }
 .section3 .section3__container .section3__container--img {
-  width: 180px;
+  width: 247px;
   height: 277px;
   -o-object-fit: cover;
      object-fit: cover;
@@ -367,7 +369,7 @@
   border-radius: 50%;
   position: absolute;
   top: 10px;
-  left: 140px;
+  left: 200px;
   background-color: #EB1768;
 }
 .section3 .section3__container .buttonFav::before {
@@ -401,7 +403,7 @@
 .footer__container .footer__container--h3 {
   width: 80%;
   font-family: "Hind", sans-serif;
-  font-size: 18px;
+  font-size: 14px;
   color: white;
 }
 .footer .footer__logo {
@@ -415,70 +417,54 @@
 }
 .footer .footer__logo .footer__logo--p {
   font-family: "Overpass", sans-serif;
-  font-size: 16px;
+  font-size: 10px;
 }
 .footer .footer__logo .footer__logo--icon {
-  width: 55%;
+  width: 93%;
   margin: 5px;
 }
 
 /*Medida de celulares*/
-@media screen and (max-width: 640px) {
-  .header .header__container .header__img {
-    display: flex;
-    justify-content: center;
-  }
-  .header .header__container .header__label {
-    height: 28vh;
-    justify-content: space-around;
-  }
-  .section__container .section__container--see .section__container--ver {
-    font-size: 16px;
-  }
+@media screen and (min-width: 281px) and (max-width: 400px) {
   .section3 .section3__container {
     justify-content: center;
-    justify-items: center;
-    grid-template-columns: repeat(3, 195px);
-  }
-  .section3 .section3__container--img {
-    width: 190px;
-  }
-  .footer__container {
-    height: 28vh;
-  }
-  .footer .footer__logo .footer__logo--icon {
-    width: 45%;
-  }
-}
-@media screen and (max-width: 360px) {
-  .header .header__container .header__img {
-    display: flex;
-    justify-content: center;
-  }
-  .header .header__container .header__label {
-    height: 15vh;
-  }
-  .section__container .section__container--see .section__container--ver {
-    font-size: 16px;
-  }
-  .section3 .section3__container {
-    justify-content: center;
-    grid-template-columns: 150px 150px;
-  }
-  .section3 .section3__container .section3__container--img {
-    width: 150px;
-  }
-  .footer .footer__container {
-    height: 15vh;
   }
   .footer .footer__logo .footer__logo--p {
-    font-size: 13px;
-  }
-  .footer .footer__logo .footer__logo--icon {
-    width: 75%;
+    font-size: 12px;
   }
 }
-/*Medida de tablets y PC*/
+/*Medida de celular volteado*/
+@media screen and (min-width: 600px) and (max-width: 800px) {
+  .header .header__container .header__label {
+    height: 25vh;
+  }
+  .section3 .section3__container {
+    justify-content: center;
+    grid-template-columns: repeat(3, 170px);
+    -moz-column-gap: 10px;
+         column-gap: 10px;
+  }
+  .section3 .section3__container .section3__container--img {
+    width: 170px;
+  }
+  .section3 .section3__container .buttonFav {
+    left: 128px;
+  }
+  .footer__container {
+    height: 30vh;
+  }
+  .footer__container .footer__container--h3 {
+    font-size: 22px;
+  }
+  .footer .footer__logo .footer__logo--p {
+    font-size: 14px;
+  }
+  .footer .footer__logo .footer__logo--icon {
+    width: 47%;
+  }
+}
+/*Medida */
+/*Medida Nest Hub, Nest Hub Max y PC*/
 @media screen and (min-width: 992px) and (max-width: 1280px) {
   .header, .header .header__container .header__label {
     display: flex;
@@ -489,6 +475,9 @@
   }
   .header .header__container .header__img {
     width: 9%;
+  }
+  .header .header__container .header__img .header__img--logo {
+    width: 82px;
   }
   .header .header__container .header__label {
     width: 88%;
@@ -540,7 +529,7 @@
     width: 90%;
     margin-left: 70px;
     margin-right: 70px;
-    grid-template-columns: repeat(5, 180px);
+    grid-template-columns: repeat(4, 180px);
   }
   .footer {
     justify-content: center;
@@ -555,76 +544,7 @@
     width: 65%;
   }
 }
-@media screen and (min-width: 640px) and (max-width: 800px) {
-  .header .header__container .header__label {
-    height: 10vh;
-  }
-  .section__container .section__container--subtitle .section__container--h2 {
-    font-size: 30px;
-  }
-  .section3 .section3__container {
-    grid-template-columns: repeat(4, 182px);
-  }
-  .footer .footer__container {
-    height: 10vh;
-  }
-  .footer .footer__logo .footer__logo--icon {
-    width: 37%;
-  }
-}
-@media screen and (min-width: 650px) and (max-width: 960px) {
-  .header .header__container .header__label {
-    height: 17vh;
-  }
-  .section3 .section3__container {
-    grid-template-columns: repeat(4, 182px);
-  }
-  .footer .footer__container {
-    height: 17vh;
-  }
-  .footer .footer__logo .footer__logo--icon {
-    width: 30%;
-  }
-}
-@media screen and (min-width: 1280px) and (max-width: 1440px) {
-  .header .header__container .header__img {
-    width: 15%;
-  }
-  .header .header__container .header__label {
-    width: 100%;
-    height: 11vh;
-    justify-content: space-around;
-  }
-  .header .header__container .header__label .header__label--input {
-    padding: 15px;
-    border-radius: 15px;
-  }
-  .header .header__container .header__label .header__label--input::-moz-placeholder {
-    font-size: 20px;
-  }
-  .header .header__container .header__label .header__label--input::placeholder {
-    font-size: 20px;
-  }
-  .nav .nav__container .nav__container--ul {
-    font-size: 30px;
-  }
-  .nav .nav__container .nav__container--list {
-    margin-top: 34px;
-  }
-  .nav .nav__container .nav__container--list .nav__container--a {
-    font-size: 26px;
-  }
-  .section__container .section__container--subtitle .section__container--h2 {
-    font-size: 30px;
-  }
-  .section3 .section3__container {
-    grid-template-columns: repeat(7, 182px);
-  }
-  .footer .footer__logo .footer__logo--icon {
-    width: 30%;
-  }
-}
-@media screen and (min-width: 1280px) and (max-width: 1920px) {
+@media screen and (min-width: 1281px) and (max-width: 1920px) {
   .header, .header .header__container .header__label {
     display: flex;
     justify-content: center;
@@ -634,6 +554,9 @@
   }
   .header .header__container .header__img {
     width: 9%;
+  }
+  .header .header__container .header__img .header__img--logo {
+    width: 86px;
   }
   .header .header__container .header__label {
     width: 88%;
@@ -684,7 +607,7 @@
     width: 90%;
     margin-left: 70px;
     margin-right: 70px;
-    grid-template-columns: repeat(5, 180px);
+    grid-template-columns: repeat(7, 180px);
   }
   .footer {
     justify-content: center;
@@ -693,7 +616,7 @@
     width: 68%;
   }
   .footer .footer__logo {
-    width: 10%;
+    width: 6%;
   }
   .footer .footer__logo .footer__logo--icon {
     width: 65%;
