--- a/styles/app.scss
+++ b/styles/app.scss
@@ -511,227 +511,30 @@
     }
 }
 
-/* @media screen and (min-width: 501px) and (max-width: 800px){
+/*Medida de Ipad Air, mini, Surface Duo y pro : Tenerlo muy pendiente, las otras pantallas están listas*/
+
+/* @media screen and (min-width: 768px) and (max-width: 912px){
     .header{   
         .header__container{
-            .header__img{
-                
-                .header__img--logo{
-                }
-            }
-            
             .header__label{
                 height: 10vh;
-                .header__label--input{
-                }
-                
                 .header__label--input::placeholder{
                     font-size: 12px;
                 }
-                
-                .header__label--m{
-                    
-                    .header__m--menu{
-                    }
-                }
             }
         }
     }
-    
-    .nav{
-        
-        &__container{
-    
-            .nav__container--ul{
-            }
-    
-            .nav__container--list{
-    
-                .nav__container--a{
-                }
-                .nav__container--a:hover{
-                }
-            }
-    
-            .active{
-            }
-            
-            .nav__container--img{
-            }
-        }
-    }
-    
-    .navArrow{
-        
-        .navArrow__back{
-        }
-    
-        .navArrow__gender{
-        }
-    }
-    
-    .inactive{
-    }
-    
-    .section{
-    
-        &__container{
-            
-            .section__container--subtitle{
-                
-                .section__container--h2{
-                }
-            }
-            
-            .section__container--see{
-                
-                .section__container--ver{
-                }
-                
-                .section__container--ver:hover{
-                }
-            }
-    
-            .section__container--peliculas{
-    
-                .containerImgBtn{
-                }
-                
-                .section__container--movie{
-                }
-    
-                .buttonFav{
-                }
-    
-                .buttonFav::before{
-                }
-    
-                .buttonFav__liked{
-                }
-    
-                .buttonFav__liked::before{
-                }
-                .section__container--like{
-                }
-            }
-        }
-    }
-    
-    .section__container--load{
-    }
-    
-    .section2{
-        
-        &__container{
-    
-            .section2__container--imagen{
-                
-                .section2__container--imag{
-                }
-    
-                .section__container--load3{
-                }
-            }
-    
-            .section2__container--details{
-                
-                .section2__container--title{
-    
-                    .section2__container--titulo{
-                    }
-                    .section2__container--carga{
-                    }
-                }
-    
-                .section2__container--description{
-                    .section2__container--sipnosis{
-                    }
-                }
-            }
-    
-            .section2__container--subtitulo{
-                .section2__container--Subtitle{
-                    
-                    .section2__container--h2{
-                    }
-                }
-                .section2__container--puntos{
-                    
-                    .section2__container--star{
-                    }
-                    
-                    .section2__container--point{
-                    }
-                }
-    
-                .section2__container--categorias{
-                    
-                    .section2__container--p{ 
-                    }
-                }
-            }
-    
-            .section2__container--similar{
-    
-                .section2__container--simiSubtitle{
-    
-                    .section2__container--simiH2{
-                    }
-                }
-    
-                .section2__container--simiCate{
-                    .section2__container--simiPeli{
-                    }
-    
-                    .section__container--load2{
-                    }
-    
-                }
-            }
-        }
-    }
-    
+
     .section3{
-    
         .section3__container{
-    
-            .containerImgBtn{
-            }
-            
-            .section3__container--img{
-            }
-    
-            .buttonFav{
-            }
-    
-            .buttonFav::before{
-            }
-    
-            .buttonFav__liked{
-            }
-    
-            .buttonFav__liked::before{
-            }
-    
-            .section__container--load4{
-            }
+            justify-content: center;
         }
     }
     
     .footer{
-    
-        &__container{
-            
-            .footer__container--h3{
-            }
-        }
-        
         .footer__logo{
-            
             .footer__logo--p{
-            }
-            
-            .footer__logo--icon{
+                font-size: 12px;
             }
         }
     }
@@ -784,12 +587,64 @@
     }
 }
 
-/*Medida */
+@media screen and (min-width: 801px) and (max-width: 991px){
+    .header{   
+        .header__container{
+            .header__img{
+                .header__img--logo{
+                    width: 83px;
+                }
+            }
+            
+            .header__label{
+                height: 20vh;
+                justify-content: space-around;
+                .header__label--input::placeholder{
+                    font-size: $font-wParrafo;
+                }
+            }
+        }
+    }
+    
+    .section3{
+        .section3__container{
+            grid-template-columns: repeat(4, 180px);
+            column-gap: 12px;
+            
+            .section3__container--img{
+                width: 180px;
+            }
+    
+            .buttonFav{
+                left: 135px;
+            }
+        }
+    }
+    
+    .footer{
+        &__container{
+            height: 30vh;
 
+            .footer__container--h3{
+                font-size: $font-wTitle;
+            }
+        }
+        
+        .footer__logo{
+            .footer__logo--p{
+               font-size: $font-wTitle;
+            }
+            
+            .footer__logo--icon{
+                width: 40%;
+            }
+        }
+    }
+}
 
 /*Medida Nest Hub, Nest Hub Max y PC*/
 
-@media screen and (min-width: 992px) and (max-width: 1280px) {
+@media screen and (min-width: 1024px) and (max-width: 1280px) {
     .header{
         display: flex;
         justify-content: center;
@@ -837,6 +692,11 @@
                     font-size: 30px;
                 }
             }
+            .section__container--see{
+                .section__container--ver{
+                    font-size: 4vmin;
+                }
+            }
             .section__container--peliculas{
                 margin-left: 22px;
                 margin-right: 0;
@@ -868,6 +728,14 @@
             margin-left: 70px;
             margin-right: 70px;
             grid-template-columns: repeat(4, 180px);
+            .containerImgBtn{
+                .section3__container--img{
+                    width: 170px;
+                }
+                .buttonFav{
+                    left: 125px;
+                }
+            }
         }
     }
 
@@ -875,6 +743,9 @@
         justify-content: center;
         .footer__container {
             width: 68%;
+            .footer__container--h3{
+                font-size: 22px;
+            }
         }
 
         .footer__logo{
@@ -896,12 +767,12 @@
             .header__img{
                 width: 9%;
                 .header__img--logo{
-                    width: 86px;
+                    width: 100px;
                 }
             }
             .header__label{
                 width: 88%;
-                height: 13vh;
+                height: 12vh;
                 justify-content: space-evenly;
             }
         }
@@ -934,6 +805,12 @@
                     font-size: 30px;
                 }
             }
+
+            .section__container--see{
+                .section__container--ver{
+                    font-size: 2vmin;
+                }
+            }
             .section__container--peliculas{
                 margin-left: 22px;
                 margin-right: 0;
@@ -964,21 +841,37 @@
             width: 90%;
             margin-left: 70px;
             margin-right: 70px;
-            grid-template-columns: repeat(7, 180px);
+            grid-template-columns: repeat(5, 180px);
+            .containerImgBtn{
+                .section3__container--img{
+                    width: 170px;
+                }
+                .buttonFav{
+                    left: 130px;
+                }
+            }
         }
     }
 
     .footer{
         justify-content: center;
         .footer__container {
-            width: 68%;
+            width: 70%;
+            height: 14vh;
+            .footer__container--h3{
+                font-size: $font-wSubtitle;
+            }
         }
 
         .footer__logo{
-            width: 6%;
+            width: 10%;
+
+            .footer__logo--p{
+                font-size: 18px;
+            }
             
             .footer__logo--icon{
-                width: 65%;
+                width: 54%;
             }
         }
     }
