--- a/styles/app.scss
+++ b/styles/app.scss
@@ -511,15 +511,26 @@
     }
 }
 
-/*Medida de Ipad Air, mini, Surface Duo y pro : Tenerlo muy pendiente, las otras pantallas están listas*/
+/*Medida de Surface Duo*/
 
-/* @media screen and (min-width: 768px) and (max-width: 912px){
-    .header{   
+@media screen and (min-width: 540px) and (max-width: 600px){
+    .header{  
         .header__container{
+            .header__img{
+                display: flex;
+                justify-content: center;
+            }
             .header__label{
-                height: 10vh;
-                .header__label--input::placeholder{
-                    font-size: 12px;
+                height: 13vh;
+            }
+        }
+    }
+
+    .section{
+        .section__container{
+            .section__container--see{
+                .section__container--ver{
+                    font-size: 4vmin;
                 }
             }
         }
@@ -527,18 +538,37 @@
 
     .section3{
         .section3__container{
-            justify-content: center;
+            grid-template-columns: repeat(3, 170px);
+
+            .section3__container--img{
+                width: 170px;
+            }
+
+            .buttonFav{
+                left: 126px;
+            }
         }
     }
     
     .footer{
+        &__container{
+            height: 15vh;
+            .footer__container--h3{
+                font-size: $font-wTitle;
+            }
+        }
+        
         .footer__logo{
             .footer__logo--p{
-                font-size: 12px;
+                font-size: 18px;
+            }
+            
+            .footer__logo--icon{
+                width: 58%;
             }
         }
     }
-} */
+}
 
 /*Medida de celular volteado*/
 
